# pb-dotfiles

./: .gitignore  .pre-commit-config.yaml  .stow-global-ignore  .stow-local-ignore  .wezterm.lua  .yamllint  .zsh_plugins.txt  .zshrc  CLAUDE.md  README.md  manage.sh  pyproject.toml
ai/: CLAUDE.md  CLAUDE.template.md  STATUS.md  repos.txt
ai/harvest-conformance/: README.md  conftest.py  idlib.py  pyproject.toml  test_consolidation_roundtrip.py  test_invariant_doc_hash.py  test_invariant_embed.py  test_provenance_roundtrip.py  test_read_endpoints.py  test_topical_coverage_gate.py  test_w8_write_guards.py
bash/: aliases  backup-excludes  bash_profile  bash_prompt  completions  exports  functions  path
config/: backup-excludes
docs/: tree-sitter-adoption-plan-20260611.md  tree-sitter-phase0-report-20260611.md  versioning.md
emacs/: 20161228-init.org  deprecated-pb-init.org  dotemacs.el  init-for-org.el  init-for-pb-init-org.el  init-org.el  init.el  loadpackages.el  modeline.el  mu4e-config.el  navigation.el  pb-init.org  pb-init2  pb-init2.el  spacemacs  spacemacs-201612311314  ui.el
git/: gitconfig
lazyvim/: nvim
macvim/: gvimrc
misc/: mbsyncrc
mutt/: muttrc
nvim/: init.vim  init.vim-old  init.vim-pb
p10k/: .p10k.zsh
scripts/: backup.sh  claude-md  deploy-repos  exif-gethour.py  find-pyasserts  getpix.py  make-timelapse.sh  personal-productivity-dashboard.Rmd  personal-productivity-dashboard.r  pre-push-review-reminder.sh  projpath.py  vim-grep  vs  wezterm-escapes.sh  wezterm-macos.sh  wezterm-record.py  wezterm_record.py
share/: backup-excludes
(+267 files in other folders)
